--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.0",
+    "@swimlane/ngx-charts": "^22.0.0-alpha.0",
+    "date-fns": "^3.0.0",
+    "echarts": "^5.4.3",
     "express": "^4.18.2",
+    "ngx-echarts": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
