--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "angular": "^1.8.3",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
+    "react": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.5.0",
@@ -22,5 +23,4 @@
     "build": "vite build",
     "preview": "vite preview"
   }
-
 }
